# handiri-hackerton

./: README.md  main.py  pyproject.toml
bot/: config.py
bot/cogs/:  upscaling.py  AI_art_generation.py  bot_register.py  normal.py  picture_analysis.py
bot/database/: mongo_logging.py  mongo_normal.py
bot/database/conn/: mongo.py
